# static-data-service

./: CMakeLists.txt  README.md  merged_data.txt
src/: marketData.hpp  staticDataService.cpp  staticDataService.hpp
tests/: fileProcessing.ft.cpp
